--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/shared.css">
     <title>Developer Portfolio</title>
 
 </head>
 <body>
-    
+    <header>
+        <p class="nav-title">Mary</p>
+        <ul class="nav-items">
+            <li class="nav-item">
+                <a href="#">Portfolio</a>
+            </li>
+            <li class="nav-item">
+                <a href="#">Blog</a>
+            </li>
+            <li class="nav-item nav-item--cta">
+                <a href="#">Hire Me</a>
+            </li>
+        </ul>
+    </header>
 </body>
 </html>
