--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <p class="nav-title">Ma<span class="text-primary">r</span>y</p>
             <ul class="nav-items">
                 <li class="nav-item">
-                    <a href="#">Portfolio</a>
+                    Portfolio
                 </li>
                 <li class="nav-item">
-                    <a href="#">Blog</a>
+                    Blog
                 </li>
-                <li class="nav-item nav-item--cta">
-                    <a href="#">Hire Me</a>
+                <li class="nav-item">
+                    <button class="nav-item--cta">Hire</button>
                 </li>
             </ul>
         </nav>
