--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <title>Developer Portfolio</title>
 
 </head>
+
 <body>
     <header>
         <nav class="nav-bar">
@@ -26,5 +28,25 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+        <div class="banner">
+            <div>
+                <p class="banner-greet">Hi, I am</p>
+                <p class="banner-title">Mary Hardy</p>
+                    <div class="banner-subtitle_holder">
+                        <p class="banner-subtitle">Shot what able cold new see hold.Friendly as an betrayed formerly he.</p>
+                        <p class="banner-subtitle">Morning because as to society behaved moments.</p>
+                    </div>
+            </div>
+            <img src="images/hardy.png" alt="">
+        </div>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
+
 </html>
