--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header-main">
         <nav class="nav-bar">
             <p class="nav-title">Ma<span class="text-primary">r</span>y</p>
             <ul class="nav-items">
@@ -27,26 +27,18 @@
                 </li>
             </ul>
         </nav>
-    </header>
-
-    <main>
         <div class="banner">
-            <div>
-                <p class="banner-greet">Hi, I am</p>
-                <p class="banner-title">Mary Hardy</p>
-                    <div class="banner-subtitle_holder">
-                        <p class="banner-subtitle">Shot what able cold new see hold.Friendly as an betrayed formerly he.</p>
-                        <p class="banner-subtitle">Morning because as to society behaved moments.</p>
-                    </div>
-            </div>
+                <div>
+                    <h3 class="banner-subtitle">Hi, I am</h3>
+                    <h1 class="banner-title">Mary Hardy</h1>
+                    <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.Morning because as to society behaved moments.</p>
+                    <button class="download">Download CV</button>
+                    <button class="contact">Contact</button>
+                </div>
             <img src="images/hardy.png" alt="">
         </div>
 
-    </main>
-
-    <footer>
-
-    </footer>
+    </header>
 </body>
 
 </html>
