--- a/index.html
+++ b/index.html
@@ -37,8 +37,32 @@
                 </div>
             <img src="images/hardy.png" alt="">
         </div>
-
     </header>
+        <main>
+            <!-- About section -->
+            <section class="about-me">
+                <h3 class="section-title">About Me</h3>
+                <p class="section-description">I, m a designer and developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+                <div class="about-info-container">
+                    <div class="about-info">
+                        <p class="about-info_title">Name</p>
+                        <p class="about-info_description">Mary Hardy</p>
+                    </div>
+                    <div class="about-info">
+                        <p class="about-info_title">Email</p>
+                        <p class="about-info_description">info@gmail.com</p>
+                    </div>
+                    <div class="about-info">
+                        <p class="about-info_title">Date of birth</p>
+                        <p class="about-info_description">11 November, 1987</p>
+                    </div>
+                    <div class="about-info">
+                        <p class="about-info_title">From</p>
+                        <p class="about-info_description">Los Angles, USA</p>
+                    </div>
+                </div>
+            </section>
+        </main>
 </body>
 
 </html>
