--- a/index.html
+++ b/index.html
@@ -62,6 +62,36 @@
                     </div>
                 </div>
             </section>
+
+            <section class="what-i-do">
+                <h3 class="section-title">What I do</h3>
+                <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+                <div class="skills-container">
+                    <div class="skill">
+                        <img src="images/icons/js.png" alt="">
+                        <p class="skill-title">Vanilla JavaScript</p>
+                        <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore maiores corporis doloremque ea quis maxime.</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/react.png" alt="">
+                        <p class="skill-title">React</p>
+                        <p class="skill-description">Unde blanditiis quisquam, velit minima nostrum dolore, nam magnam, iure illo commodi odit dicta. Eum.</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/nodejs.png" alt="">
+                        <p class="skill-title">Node.js</p>
+                        <p class="skill-description">Dignissimos quam blanditiis eum vitae ullam quaerat iste fugiat saepe? Nobis rem similique tempore iure!</p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/mongo.png" alt="">
+                        <p class="skill-title">MongoDB</p>
+                        <p class="skill-description">Quia modi a sed, natus eum, quis illo unde, perferendis praesentium reprehenderit harum quos pariatur!</p>
+                    </div>
+                </div>
+            </section>
+            <section class="resume">
+                <h3 class="section-title">A summary of my resume</h3>
+            </section>
         </main>
 </body>
 
