--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="styles/shared.css">
     <link rel="stylesheet" href="styles/main.css">
     <title>Developer Portfolio</title>
-
 </head>
 
 <body>
+
     <header class="header-main">
         <nav class="nav-bar">
             <p class="nav-title">Ma<span class="text-primary">r</span>y</p>
@@ -28,127 +28,151 @@
             </ul>
         </nav>
         <div class="banner">
-                <div>
-                    <h3 class="banner-subtitle">Hi, I am</h3>
-                    <h1 class="banner-title">Mary Hardy</h1>
-                    <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.Morning because as to society behaved moments.</p>
-                    <button class="download">Download CV</button>
-                    <button class="contact">Contact</button>
-                </div>
+            <div>
+                <h3 class="banner-subtitle">Hi, I am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly
+                    he.Morning because as to society behaved moments.</p>
+                <button class="download">Download CV</button>
+                <button class="contact">Contact</button>
+            </div>
             <img src="images/hardy.png" alt="">
         </div>
     </header>
-        <main>
-            <!-- About section -->
-            <section class="about-me">
-                <h3 class="section-title">About Me</h3>
-                <p class="section-description">I, m a designer and developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
-                <div class="about-info-container">
-                    <div class="about-info">
-                        <p class="about-info_title">Name</p>
-                        <p class="about-info_description">Mary Hardy</p>
-                    </div>
-                    <div class="about-info">
-                        <p class="about-info_title">Email</p>
-                        <p class="about-info_description">info@gmail.com</p>
-                    </div>
-                    <div class="about-info">
-                        <p class="about-info_title">Date of birth</p>
-                        <p class="about-info_description">11 November, 1987</p>
-                    </div>
-                    <div class="about-info">
-                        <p class="about-info_title">From</p>
-                        <p class="about-info_description">Los Angles, USA</p>
-                    </div>
-                </div>
-            </section>
 
-            <section class="what-i-do">
-                <h3 class="section-title">What I do</h3>
-                <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
-                <div class="skills-container">
-                    <div class="skill">
-                        <img src="images/icons/js.png" alt="">
-                        <p class="skill-title">Vanilla JavaScript</p>
-                        <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore maiores corporis doloremque ea quis maxime.</p>
-                    </div>
-                    <div class="skill">
-                        <img src="images/icons/react.png" alt="">
-                        <p class="skill-title">React</p>
-                        <p class="skill-description">Unde blanditiis quisquam, velit minima nostrum dolore, nam magnam, iure illo commodi odit dicta. Eum.</p>
-                    </div>
-                    <div class="skill">
-                        <img src="images/icons/nodejs.png" alt="">
-                        <p class="skill-title">Node.js</p>
-                        <p class="skill-description">Dignissimos quam blanditiis eum vitae ullam quaerat iste fugiat saepe? Nobis rem similique tempore iure!</p>
-                    </div>
-                    <div class="skill">
-                        <img src="images/icons/mongo.png" alt="">
-                        <p class="skill-title">MongoDB</p>
-                        <p class="skill-description">Quia modi a sed, natus eum, quis illo unde, perferendis praesentium reprehenderit harum quos pariatur!</p>
+    <main>
+        <!-- About section -->
+        <section class="about-me">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I, m a designer and developer with a passion for web design. I enjoy
+                developing simple, clean and slick websites that provide real value to the end user. Thousands of
+                clients have procured exceptional resulfs while working with me. Delivering work within time and budget
+                which meets clients requirements in our mata.</p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <p class="about-info_title">Name</p>
+                    <p class="about-info_description">Mary Hardy</p>
+                </div>
+                <div class="about-info">
+                    <p class="about-info_title">Email</p>
+                    <p class="about-info_description">info@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <p class="about-info_title">Date of birth</p>
+                    <p class="about-info_description">11 November, 1987</p>
+                </div>
+                <div class="about-info">
+                    <p class="about-info_title">From</p>
+                    <p class="about-info_description">Los Angles, USA</p>
+                </div>
+            </div>
+        </section>
+        <!-- skills section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I do</h3>
+            <p class="section-description">I have more than 10 years experience building software for clients all over
+                the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to
+                find out more about my experience? Check out my online resume and project portfolio.</p>
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="skill-title">Vanilla JavaScript</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore
+                        maiores corporis doloremque ea quis maxime.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Unde blanditiis quisquam, velit minima nostrum dolore, nam magnam, iure
+                        illo commodi odit dicta. Eum.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node.js</p>
+                    <p class="skill-description">Dignissimos quam blanditiis eum vitae ullam quaerat iste fugiat saepe?
+                        Nobis rem similique tempore iure!</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-description">Quia modi a sed, natus eum, quis illo unde, perferendis praesentiumr eprehenderit harum quos pariatur!
+                    </p>
+                </div>
+            </div>
+        </section>
+        <!-- Resume section -->
+        <section class="resume">
+            <h3 class="section-title">A summary of my resume</h3>
+            <div class="resume-content">
+                <div>
+                    <h3 class="resume-title">My education</h3>
+                    <!-- My Education Files -->
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering
+                        </h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017
+                        </h5>
+                        <p class="description">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div><hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering
+                        </h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017
+                        </h5>
+                        <p class="description">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div><hr>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering
+                        </h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017
+                        </h5>
+                        <p class="description">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                 </div>
-            </section>
-            <section class="resume">
-                <h3 class="section-title">A summary of my resume</h3>
-                <div class="resume-content">
-                    <div>
-                        <h3 class="resume-title">My education</h3>
-                        <div class="resume-item">
-                            <h4 class="title">Master in Computer Engineering</h4>
-                            <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
-                            <p class="description">List skill/technologies here. You can change the icon above 
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                            <p>
-                        </div>
-                        <hr>
-                        <div class="resume-item">
-                            <h4 class="title">Master in Computer Engineering</h4>
-                            <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
-                            <p class="description">List skill/technologies here. You can change the icon above 
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                            <p>
-                        </div>
-                        <hr>
-                        <div class="resume-item">
-                            <h4 class="title">Master in Computer Engineering</h4>
-                            <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
-                            <p class="description">List skill/technologies here. You can change the icon above 
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                            <p>
-                        </div>
-                        <hr>
-                    </div>
-                    <div>
-                        <h3 class="resume-title">My experience</h3>
-                        <div class="resume-item">
-                            <h4 class="title">Master in Computer Engineering</h4>
-                            <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
-                            <p class="description">List skill/technologies here. You can change the icon above 
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                            <p>
-                        </div>
-                        <hr>
-                        <div class="resume-item">
-                            <h4 class="title">Master in Computer Engineering</h4>
-                            <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
-                            <p class="description">List skill/technologies here. You can change the icon above 
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                            <p>
-                        </div>
-                        <hr>
-                        <div class="resume-item">
-                            <h4 class="title">Master in Computer Engineering</h4>
-                            <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
-                            <p class="description">List skill/technologies here. You can change the icon above 
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
-                            <p>
-                        </div>
-                        <hr>
+                <div>
+                    <h3 class="resume-title">My experience</h3>
+                    <!-- My Experience Files -->
+                    <div class="resume-item">
+                        <h4 class="title">Sr. Font End Developer
+                        </h4>
+                        <h5 class="sub-title">Apple Inc / 2020 - Current
+                        </h5>
+                        <p class="description">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div><hr>
+                    <div class="resume-item">
+                        <h4 class="title">Jr. Font End Developer
+                        </h4>
+                        <h5 class="sub-title">Dribbble Inc / 2018 - 2022
+                        </h5>
+                        <p class="description">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div><hr>
+                    <div class="resume-item">
+                        <h4 class="title">HTML Developer
+                        </h4>
+                        <h5 class="sub-title">Adobe Inc / 2017 - 2018
+                        </h5>
+                        <p class="description">
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                 </div>
-            </section>
-        </main>
+            </div>
+            <div class="resume-download-option">
+                <button class="download">Download CV</button>
+            </div>
+        </section>
+
+    </main>
 </body>
 
 </html>
