--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly
                     he.Morning because as to society behaved moments.</p>
                 <button class="download">Download CV</button>
-                <button class="contact">Contact</button>
+                <button class="contact-me">Contact</button>
             </div>
             <img src="images/hardy.png" alt="">
         </div>
@@ -70,9 +70,7 @@
         <!-- skills section -->
         <section class="what-i-do">
             <h3 class="section-title">What I do</h3>
-            <p class="section-description">I have more than 10 years experience building software for clients all over
-                the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to
-                find out more about my experience? Check out my online resume and project portfolio.</p>
+            <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
             <div class="skills-container">
                 <div class="skill">
                     <img src="images/icons/js.png" alt="">
@@ -171,7 +169,35 @@
                 <button class="download">Download CV</button>
             </div>
         </section>
-
+        <!-- contact section -->
+        <section class="contact">
+            <div>
+                <h3 class="section-title">Lets Connect</h3>
+                <p class="section-description_contact">
+                    Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+                </p>
+                <div class="socials">
+                    <a href="">
+                        <img src="./images/icons/facebook.png" alt="">
+                    </a>
+                    <a href="">
+                        <img src="./images/icons/twitter.png" alt="">
+                    </a>
+                    <a href="">
+                        <img src="./images/icons/insta.png" alt="">
+                    </a>
+                </div>
+            </div>
+            <div>
+                <h3 class="section-title">Lets Message me</h3>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Your Name">
+                    <input type="email" name="" id="" placeholder="your email">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                    <input class="download" type="submit" value="submit">
+                </form>
+            </div>
+        </section>
     </main>
 </body>
 
