--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/33fb43d274.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/main.css">
     <title>Developer Portfolio</title>
 </head>
@@ -32,7 +33,7 @@
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly
                     he.Morning because as to society behaved moments.</p>
-                <button class="download">Download CV</button>
+                <button class="download"><i class="fa-solid fa-download"></i> Download CV</button>
                 <button class="contact-me">Contact</button>
             </div>
             <img src="images/hardy.png" alt="">
@@ -165,7 +166,7 @@
                 </div>
             </div>
             <div class="resume-download-option">
-                <button class="download">Download CV</button>
+                <button class="download"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
         <!-- contact section -->
