--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly
                     he.Morning because as to society behaved moments.</p>
                 <button class="download"><i class="fa-solid fa-download"></i> Download CV</button>
-                <button class="contact-me">Contact</button>
+                <button class="contact-me"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img src="images/hardy.png" alt="">
         </div>
